--- a/public/styles/scss/components/_backdrop.scss
+++ b/public/styles/scss/components/_backdrop.scss
@@ -10,6 +10,8 @@
 .page {
   min-height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 
